--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "storybook": "start-storybook -p 3000 --no-open"
   },
   "dependencies": {
+    "@vueuse/core": "^9.4.0",
+    "animate.css": "^4.1.1",
     "pinia": "^2.0.22",
     "utils-sdz": "^0.0.12",
     "v-money3": "^3.22.1",
@@ -46,10 +48,13 @@
     "@vitest/coverage-c8": "^0.24.0",
     "@vitest/ui": "^0.24.0",
     "@vue/test-utils": "^2.1.0",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
     "jsdom": "^20.0.1",
+    "postcss": "^8.4.18",
     "sass": "^1.55.0",
     "storybook-dark-mode": "^1.1.2",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-tsconfig-paths": "^3.5.1",
