add tailwind e alguns componentes de exemplo

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "animate.css": "^4.1.1",
     "pinia": "^2.0.22",
     "utils-sdz": "^0.0.12",
+    "uuid": "^9.0.0",
     "v-money3": "^3.22.1",
     "vue": "^3.2.37",
     "vue-coerousel": "^1.0.19",
@@ -44,6 +45,7 @@
     "@storybook/builder-vite": "^0.2.4",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.12",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitest/coverage-c8": "^0.24.0",
     "@vitest/ui": "^0.24.0",
