:wrench: build config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
+    "outDir": "dist",
+    "declaration": true,
+    // "emitDeclarationOnly": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
     "baseUrl": ".",
