--- a/package.json
+++ b/package.json
@@ -15,13 +15,25 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build && vue-tsc --emitDeclarationOnly && mv dist/src dist/types",
     "preview": "vite preview",
     "test": "vitest --watch --ui",
     "coverage": "vitest run --coverage",
     "build-storybook": "build-storybook",
     "storybook": "start-storybook -p 3000 --no-open"
   },
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/batata.umd.js",
+  "module": "./dist/batata.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/batata.es.js",
+      "require": "./dist/batata.umd.js"
+    }
+  },
+  "types": "./dist/types/index.d.ts",
   "dependencies": {
     "@vueuse/core": "^9.4.0",
     "animate.css": "^4.1.1",
@@ -59,6 +71,7 @@
     "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
+    "vite-plugin-checker": "^0.5.1",
     "vite-tsconfig-paths": "^3.5.1",
     "vitest": "^0.24.0",
     "vue-loader": "^16.8.3",
