--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "rootDir": "src",
+    "declarationDir": "dist",
     "types": [
       "vitest/globals",
       "vite/client"
