--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
  {
-  "name": "vue-sdz-v3",
+  "name": "potatify",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -25,15 +25,18 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/batata.umd.js",
-  "module": "./dist/batata.es.js",
+  "main": "./dist/potatify.umd.js",
+  "module": "./dist/potatify.es.js",
   "exports": {
     ".": {
-      "import": "./dist/batata.es.js",
-      "require": "./dist/batata.umd.js"
+      "import": "./dist/potatify.es.js",
+      "require": "./dist/potatify.umd.js"
     }
   },
-  "types": "./dist/types/index.d.ts",
+   "peerDependencies": {
+     "tailwindcss": "^3.2.1"
+   },
+   "types": "./dist/types/index.d.ts",
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@vueuse/core": "^9.4.0",
