--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "potatify",
   "private": true,
   "version": "0.0.0",
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vue-tsc --emitDeclarationOnly",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "test": "vitest --watch --ui",
     "coverage": "vitest run --coverage",
@@ -23,7 +23,7 @@
     "storybook": "start-storybook -p 3000 --no-open"
   },
   "files": [
-    "dist"
+    "dist/"
   ],
   "main": "./dist/potatify.umd.js",
   "module": "./dist/potatify.es.js",
@@ -31,12 +31,13 @@
     ".": {
       "import": "./dist/potatify.es.js",
       "require": "./dist/potatify.umd.js"
-    }
+    },
+    "./dist/style.css": "./dist/style.css"
   },
-   "peerDependencies": {
-     "tailwindcss": "^3.2.1"
-   },
-   "types": "./dist/types/index.d.ts",
+  "peerDependencies": {
+    "tailwindcss": "^3.2.1"
+  },
+  "types": "./dist/types/index.d.ts",
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@vueuse/core": "^9.4.0",
@@ -76,7 +77,7 @@
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-checker": "^0.5.1",
-    "vite-tsconfig-paths": "^3.5.1",
+    "vite-plugin-compression": "^0.5.1",
     "vitest": "^0.24.0",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.40.4"
