--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "potatify",
   "private": true,
   "version": "0.0.0",
@@ -28,15 +28,16 @@
   "main": "./dist/potatify.umd.js",
   "module": "./dist/potatify.es.js",
   "exports": {
+    "./dist/style.css": "./dist/style.css",
     ".": {
       "import": "./dist/potatify.es.js",
       "require": "./dist/potatify.umd.js"
     }
   },
-   "peerDependencies": {
-     "tailwindcss": "^3.2.1"
-   },
-   "types": "./dist/types/index.d.ts",
+  "peerDependencies": {
+    "tailwindcss": "^3.2.1"
+  },
+  "types": "./dist/types/index.d.ts",
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@vueuse/core": "^9.4.0",
@@ -61,6 +62,7 @@
     "@storybook/builder-vite": "^0.2.4",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.12",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitest/coverage-c8": "^0.24.0",
