Faz alterações no layout base do frontend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"]
+      "@components/*": ["./src/components/*"],
+      "tailwind.config.js": ["./tailwind.config.cjs"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
